@@ -789,6 +789,18 @@ tools::assertError(t0(1, 2))
 ## the first gave a different error msg, the next gave no error in R < 3.5.0
 
 
+## stopifnot(e1, e2, ...) .. evaluating expressions sequentially
+one <- 1
+try(stopifnot(3 < 4:5, 5:6 >= 5, 6:8 <= 7, one <- 2))
+stopifnot(identical(one, 1))
+## all the expressions were evaluated in R <= 3.4.x
+et <- tryCatch(stopifnot(0 < 1:10, is.numeric(..vaporware..)),
+	       error=identity)
+stopifnot(identical(print(conditionCall(et))[[1]],
+		    quote(is.numeric)))
+## call was the full 'stopifnot(..)' in R < 3.5.0
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
